@@ -12,6 +12,8 @@ const Map<String, String> roleBasedHeadings = {
   'Top': 'Let''s see if you''re a real brawler!\n',
 };
 const String noRoleFound = 'Oh no, something went wrong! I don''t know which role you are';
+String carriedMVP(seconds) {return '\nYou carried that game, do a plank for $seconds seconds!';} 
+String notCarriedMVP(seconds) {return '\nYou didn\'t carry that game, do a plank for $seconds seconds!';} 
 const String disclaimer = 'This application is not endorsed by Riot Games and does not reflect the views or opinions of Riot Games or anyone officially involved in producing or managing League of Legends. League of Legends and Riot Games are trademarks or registered trademarks of Riot Games, Inc. League of Legends © Riot Games, Inc.';
 // ========================== Number Constants ==========================
 const Map<String, Map<String, int>> roleWeighting = {
@@ -57,10 +59,12 @@ const Map<String, Map<String, int>> roleWeighting = {
   },
 };
 const Map<String, int> defaultWeighting = {
-  'Kills': 2,
-  'Deaths': 2,
-  'Assists': 2,
+  'Kills': 1,
+  'Deaths': 1,
+  'Assists': 1,
   'VisionScore': 2,
-  'CreepScore': 2,
+  'CreepScore': 1,
   'KillParticipation': 2,
 };
+// ========================== Test String Constants ==========================
+const String testAdvancedFitnessADC = 'Lets see just how much you can carry!\n\nYou carried that game, do a plank for 45 seconds!\nDo 3 sets of 6 squats for each kill\nDo 2 sets of 4 lunges for each assist\nDo 1 set of 10 burpees for each death\nDo 1 set of 19 high knees for your vision score\nDo 1 set of 6 sit-ups for your CS\nDo 2 sets of 31 jumping jacks for your kill participation';
