@@ -1,4 +1,5 @@
 import 'package:flutter_test/flutter_test.dart';
+import 'package:league_of_logs/src/utils/constants.dart';
 import 'package:league_of_logs/src/workout_generator/player_stats.dart';
 import 'package:league_of_logs/src/workout_generator/workout_generator_service.dart';
 
@@ -6,26 +7,27 @@ void main() {
   group('WorkoutGeneratorService', () {
     final service = WorkoutGeneratorService();
 
-    test('generates workout correctly for single stat', () {
+    test('generates workout correctly for decent ADC stats on Advanced fitness', () {
       // Arrange
       final PlayerStats stats = PlayerStats(
-        name: 'Fwomp',
-        role: 'Support',
-        isMVP: false,
-        kills: 4,
+        name: 'Demo1Ace',
+        role: 'ADC',
+        isMVP: true,
+        kills: 15,
         deaths: 5,
-        assists: 24,
-        teamKills: 56,
-        creepScore: 31,
-        visionScore: 84,
-        gameDuration: 38,
+        assists: 8,
+        teamKills: 46,
+        creepScore: 194,
+        visionScore: 15,
+        gameDuration: 37,
       );
+      final String fitnessLevel = 'Advanced';
 
       // Act
-      final result = service.generateWorkout(playerStats: stats);
+      final result = service.generateWorkout(playerStats: stats, fitnessLevel: fitnessLevel);
 
       // Assert
-      expect(result, 'Lets see just how much weight you can support!\n\nYou didnt carry that game, do a plank until failure!\nDo 1 set of 4 squats for each kill\nDo 2 sets of 3 lunges for each assist\nDo 3 sets of 8 burpees for each death\nDo 3 sets of 28 high knees for your vision score\nDo 1 set of 1 sit-ups for your CS\nDo 2 sets of 25 jumping jacks for your kill participation');
+      expect(result, testAdvancedFitnessADC);
     });
   });
 }
